ferris-example/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ferris-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ferris-example
      part-of: ferris-apps
  template:
    metadata:
      labels:
        app: ferris-example
        part-of: ferris-apps
    spec:
      containers:
      - name: ferris-example
        image: eu.gcr.io/talent-test-drive/ferris-example:1.0
        imagePullPolicy: "Always"
        # Map all env variables from specified configmap 
        securityContext:
          runAsUser: 10000
        ports:
          - containerPort: 5000
